--- a/dev/index.html
+++ b/dev/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<title> GeoText </title>
 		<link rel="stylesheet" type="text/css" href="css/index.css">
+		<link rel="stylesheet" type="text/css" href="css/reset.css">
 		<body>
 		</body>
 	</head>
