--- a/dev/index.html
+++ b/dev/index.html
@@ -2,8 +2,9 @@
 <html>
 	<head>
 		<title> GeoText </title>
-		<link rel="stylesheet" type="text/css" href="css/index.css">
 		<link rel="stylesheet" type="text/css" href="css/reset.css">
+		<link rel="stylesheet" type="text/css" href="css/index.css">
 		<body>
+			<h1> GeoText </h1> 
 		</body>
 	</head>
