--- a/dev/index.html
+++ b/dev/index.html
@@ -3,70 +3,55 @@
 	<head>
 		<title> GeoText </title>
 		<link rel="stylesheet" type="text/css" href="css/reset.css">
+		<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 		<link rel="stylesheet" type="text/css" href="css/index.css">
-		<link rel="stylesheet" type="text/css" href="bootstrap.css">
-		<body>
-			<h1> GeoText </h1> 
-		</body>
+		<meta name="viewport" content="width=device-width, initial-scale=1" user-scalable=no>
+		<link href='http://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
 	</head>
 
-	<body class=>
+	<body>
 
 <!-- Application Interface Wrapper -->
-		<div id="GeoTextApp">
-			<div class="GeoTextTitle">
-				<h1>GeoText</h1>
+	<div class="wrapper">
+		<nav class="navbar navbar-default GeoTextTitle" role="navigation">
+			<div class="container-fluid">
+		<!-- Brand and toggle get grouped for better mobile display -->
+				 <div class="navbar-header"> GeoText
+				 </div>
 			</div>
+		</nav>
 
-			<div class="content">
-				<div class="message-view">
-					<h4 id="location"> Location </h3>
-<!-- 					//Replace "Newell Simon Atrium" with real data.
- -->					<h3 id="location-name"> Newell Simon Atrium</h3>
-<!-- 					//Replace "atrium.jpg" with data.
- -->					<img src="../pictures/atrium.jpg">
-					<div class="message-view-msg">
-						<div class="message-text">
-<!-- 							//replace "Sasha" with data
- -->		 					<h7 class="name">Sasha</h7>
-<!-- 		 					//replace with Message. 
- -->		 					Location change NSH 201
-						</div>
-					</div>
-					<button type="button" class="btn btn-default btn-delete">Delete</button>
-					<button type="button" class="btn btn-default btn-reply">Reply</button>
-
+		<div class="content">
+			<div class="message-view">
+				<h4 id="location"> Location </h4>
+				<!-- 		Replace "Newell Simon Atrium" with real data.-->
+				<div id="location_name"> Newell Simon Atrium</div>
+				<!-- 			//Replace "atrium.jpg" with data.-->
+				<img class="message_photo" src="../pictures/atrium.jpg" width="300"/>
+			</div>
+			<div class="message_container">
+				<div class="sender_name">
+					Sasha:
 				</div>
-
+				<div class="message_content">
+					Location changed to NSH 201. 
+				</div>
 			</div>
-
+			<button type="button" class="btn btn-default btn-delete">Delete</button>
+				<button type="button" class="btn btn-default btn-reply">Reply</button>
+			<div class="push"></div> 
 		</div>
-		<div id="footer">
+	</div>
+	<div class="footer" id="footer"> 
+		<div class="footer_text">
 			Tartan Hack Spring 2014
 		</div>
+	</div>
 
 
 <!-- Templates -->
     <script type="text/template" id="message-view-template">
-		<div class="message-view">
-			<h4 id="location"> Location </h3>
-			//Replace "Newell Simon Atrium" with real data.
-			<h3 id="location-name"> Newell Simon Atrium</h3>
-			//Replace "atrium.jpg" with data.
-			<img src="atrium.jpg">
-			<div class="message-view-msg">
-				<div class="message-text">
-					//replace "Sasha" with data
- 					<h7 class="name">Sasha</h7>
- 					//replace with Message. 
- 					Location change NSH 201
-				</div>
-			</div>
-			<button type="button" class="btn btn-default btn-delete">Delete</button>
-			<button type="button" class="btn btn-default btn-reply">Reply</button>
-
-		</div>
-    </script>
+		</script>
 
 	</body>
 
