--- a/dev/index.html
+++ b/dev/index.html
@@ -33,6 +33,24 @@
 	</div>
 
 <!-- Templates -->
+	<script type="text/template" id="welcome-view-template">
+		<div class="welcome-view">
+			<div class="welcome">
+				<img src="../pictures/patrick.png" width="173" height="200" class ="patrick"> Wat?<br>
+			</div>
+			<form role="form">
+				<div class="form-group">
+					<label for="loginName">Username</label>
+					<input type="text" class="form-control" id="loginName" placeholder="">
+				</div>
+				<div class="form-group">
+					<label for="loginPassWord">Password</label>
+					<input type="text" class="form-control" id="loginPassWord" placeholder="">
+				</div>
+				<button type="submit" class="btn btn-bg btn-g login">Log In</button>
+			</form>
+		</div>
+	</script>
   <script type="text/template" id="message-view-template">
 		<div class="message-view">
 			<h4 id="location"> Location </h4>
