fixed message list page

--- a/dev/index.html
+++ b/dev/index.html
@@ -50,6 +50,7 @@
 				<button type="submit" class="btn btn-bg btn-g login">Log In</button>
 			</form>
 		</div>
+		<div class="push"></div> 
 	</script>
   <script type="text/template" id="message-view-template">
 		<div class="message-view">
@@ -94,9 +95,12 @@
 		</div>
 		<div class="push"></div> 
   </script>
-  <!-- Require unstyled content div -->
+  <!-- Requires unstyled content div -->
 	<script type="text/template" id="message-list-template">
-		<ul class="feed_list">
+		<div class="button_container">
+				<button type="button" class="btn btn-default compose_button">Compose</button>
+			</div>
+			<ul class="feed_list">
 			<li class="list_container">
 				
 <!-- 						<img src="img/icon.jpeg" width="80" align="left"/> -->
@@ -109,6 +113,7 @@
 			</li>
 			<hr/>
 		</ul>
+		
 		<div class="push"></div> 
 	</script>
 	</body>
