--- a/dev/index.html
+++ b/dev/index.html
@@ -34,9 +34,9 @@
 
 <!-- Templates -->
 	<script type="text/template" id="welcome-view-template">
-		<div class="welcome-view">
+			<div class="welcome-view">
 			<div class="welcome">
-				<img src="../pictures/patrick.png" width="173" height="200" class ="patrick"> Wat?<br>
+				<img src="img/patrick.jpg" width="173" height="200" class ="patrick"> Wat?<br>
 			</div>
 			<form role="form">
 				<div class="form-group">
@@ -47,7 +47,7 @@
 					<label for="loginPassWord">Password</label>
 					<input type="text" class="form-control" id="loginPassWord" placeholder="">
 				</div>
-				<button type="submit" class="btn btn-bg btn-g login">Log In</button>
+				<button type="submit" class="btn btn-default btn-default login">Log In</button>
 			</form>
 		</div>
 		<div class="push"></div> 
