added shadow to text message

--- a/dev/index.html
+++ b/dev/index.html
@@ -22,9 +22,28 @@
 		</nav>
 <!-- Special content div! -->
 		<div class="content">
+			<div class="message-view">
+			<h4 id="location"> Location </h4>
+			<!-- 		Replace "Newell Simon Atrium" with real data.-->
+			<div id="location_name"> Newell Simon Atrium</div>
+			<!-- 			//Replace "atrium.jpg" with data.-->
+			<img class="message_photo" src="../pictures/atrium.jpg" width="300"/>
 		</div>
-		<div class="unstyled-content">
+		<div class="message_container">
+			<div class="sender_name">
+				Sasha:
+			</div>
+			<div class="message_content">
+				Location changed to NSH 201. 
+			</div>
 		</div>
+		<button type="button" class="btn btn-default btn-delete">Delete</button>
+		<button type="button" class="btn btn-default btn-reply">Reply</button>
+		<br>
+		<div class="push"></div> 
+		</div>
+<!-- 		<div class="unstyled-content">
+		</div> -->
 	</div>
 	<div class="footer" id="footer"> 
 		<div class="footer_text">
